<resources>
    <string name="app_name">Firebase Authentication</string>
    <string name="email_username">Email/Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="redirect_signin">Already a user? SignIn</string>
    <string name="login">Login</string>
    <string name="redirect_signup">New User? SignUp</string>
</resources>